[package]
name = "flappy_bird_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "*"
embedded-hal = "0.2.7"  # default usage — v1.0
rtt-target = "0.6.1"
libm = "0.2.15"
cortex-m-rt = "0.7.3"
stm32f4xx-hal = { version = "0.15", features = ["stm32f429", "rt"] }

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[features]
default = []
log = []

[build-dependencies]
cc = "1.0"
