//[package]
//name = "led-button-interrupt"
//version = "0.1.0"
//dition = "2024"

//[dependencies]



[package]
name = "led-button-interrupt"  # Placeholder for cargo-generate
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"           # For Cortex-M support
cortex-m-rt = "0.7"        # Runtime for Cortex-M
panic-halt = "0.2"         # Panic handler for embedded systems
stm32f4 = "0.15"           # STM32F4 HAL (adjust version as needed)

[profile.release]
opt-level = "s"            # Optimize for size
lto = true                 # Enable link-time optimization